# gp-elite

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.fr.md  README.md  RELEASE_v0.2.0_INSTRUCTIONS.md  RELEASE_v0.3.0_INSTRUCTIONS.md  pyproject.toml
benchmarks/: ab_final.py  duel.py  feynman_bench.py  feynman_suite.py  results_frozen_v0.2.0.jsonl  srbench_dryrun.py
examples/: battery_soh.py  conservation_laws.py  dimensional_audit.py  forecast_battery_soh.py  kepler_demo.py  nasa_battery_simulation.csv  residual_diagnostics.py  robust_regression.py  scaling_laws_demo.py  stability_bootstrap.py
gp_elite/: __init__.py  __main__.py  api.py  cli.py  core.py  dim_search.py  dimensions.py  sklearn_api.py  stability.py
tests/: test_gp_elite.py
